# gesture_control

./: .gitignore  CMakeLists.txt  gesture_server.py  readme.md  todo.md
config/: client_settings.json
docs/: architecture.md  design_decisions.md  development_plan.md  gesture_reference.md  protocol.md
python/: Angles.py  Boundaries.py  Boundaries2.py  FeatureExtractor.py  GestureClassifier.py  GestureProcessor.py  GestureServer.py  GestureState.py  HandData.py  HandFeatures.py  HandTracker.py  Network.py  __main__.py  config.json  helpers.py  main_loop.py
src/: GestureEngine.cpp  GestureEngine.h  InputSimulator.cpp  InputSimulator.h  MainWindow.cpp  MainWindow.h  main.cpp
src/common/: Constants.h  Types.h  Utils.cpp  Utils.h
src/core/: GestureEngine.cpp  GestureEngine.h  GestureStateMachine.cpp  GestureStateMachine.h
src/core/Filters/: HandSmoothingFilter.cpp  HandSmoothingFilter.h
src/network/: TcpClient.cpp  TcpClient.h
src/platform/: InputBackend.h  InputSimulator.h  PlatformFactory.cpp  PlatformFactory.h
src/platform/linux/: LinuxInputBackend.cpp  LinuxInputBackend.h
src/platform/mac/: MacInputBackend.cpp  MacInputBackend.h
src/platform/windows/: WindowsInputBackend.cpp  WindowsInputBackend.h
src/ui/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
tools/: 3Dto2Dprojection.py
